[package]
name = "openslide"
version = "0.2.0"
authors = ["Ole-Johan Skrede <ojskrede@gmail.com>"]
edition = "2018"

description = "Rust bindings to the OpenSlide C library"
repository = "https://github.com/ojskrede/openslide-rust"
readme = "README.md"
keywords = ["openslide", "histopathology", "microscopy"]
categories = ["science"]
license = "MIT/Apache-2.0"
exclude = ["assets/*"]

[[bin]]
name = "development"
path = "src/bin/development.rs"
required-features = ["binaries"]

[features]
binaries = ["clap"]

[dependencies]
libc = "0.2"
failure = "0.1"
image = "0.23"
num = "0.2"
byteorder = "1.3"
clap = { version = "2.33", optional = true }

[dev-dependencies]
float-cmp = "0.6"

[build-dependencies]
cc = "1.0"
